Fix header xas too big

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
 
 h1 {
     animation: neon 10s ease-in-out infinite;
+    margin-top: 0.5em !important;
 }
 
 @keyframes neon {
